# ufo

./: .gitmodules  Cargo.toml  README.md
examples/InriaSerif-Regular.ufo/: fontinfo.plist  metainfo.plist
examples/KJV1611.ufo/: fontinfo.plist  lib.plist
examples/KJV1611.ufo/glyphs/: A_.alt.glif  A_circumflex.glif  A_macron.glif  B_.alt.glif  B_.glif  C_acute.glif  C_cedilla.glif  C_circumflex.glif  D_croat.glif  E_.glif  E_acute.glif  E_circumflex.glif  G_.glif  G_breve.glif  H_.alt.glif  H_.glif  H_circumflex.glif  I_.glif  I_S_.glif  I_breve.glif  I_dotaccent.glif  I_macron.glif  I_ogonek.glif  J_.glif  K_appa.glif  L_caron.glif  M_u.glif  N_acute.glif  N_tilde.glif  O_.glif  O_E_.glif  O_circumflex.glif  O_megatonos.glif  O_slash.glif  O_slashacute.glif  P_si.glif  S_cedilla.glif  S_circumflex.glif  U_.glif  U_macron.glif  (+202 more)
examples/KJV1611.ufo/glyphs.B_ack/: contents.plist  f_f.glif  uni0432.glif
examples/Layered.ufo/: metainfo.plist
lib/: Cargo.toml
lib/src/: blocks.rs  lib.rs
lib/tests/: group_blocks.rs
lib/tests/common/: mod.rs
src/: filedialog.rs  fontview.rs  ipc.rs  main.rs  menu.rs  ufo_cache.rs  util.rs  viewer.rs
src/glyphs/: mod.rs  types.rs
src/gui/: fontview.rs  mastertab.rs  menu.rs  mod.rs
src/interface/: mod.rs  sdl.rs
src/interpolation/: mod.rs
src/parsing/: glyph_entries.rs  metadata.rs  mod.rs
src/tests/: group_blocks.rs  mod.rs
test_data/KJV1611.ufo/: features.fea
test_data/KJV1611.ufo/glyphs/: A_.glif  A_E_.glif  A_E_acute.glif  A_acute.glif  A_breve.glif  A_dieresis.glif  A_grave.glif  A_lpha.glif  A_lphatonos.glif  A_ogonek.glif  A_ring.glif  A_ringacute.glif  A_tilde.glif  B_.alt2.glif  C_.alt.glif  C_.glif  C_caron.glif  C_dotaccent.glif  C_hi.glif  D_.alt.glif  D_.glif  D_caron.glif  E_.alt.glif  E_.alt2.glif  E_.alt3.glif  E_breve.glif  E_caron.glif  E_dieresis.glif  E_dotaccent.glif  E_grave.glif  E_macron.glif  E_ng.glif  E_ogonek.glif  E_psilon.glif  E_psilontonos.glif  E_ta.glif  E_tatonos.glif  E_th.glif  E_uro.glif  F_.glif  (+408 more)
test_data/KJV1611.ufo/glyphs.B_ack/: E_.glif  H_bar.glif  W_.alt.glif  f_i.glif  hyphen.alt.glif  longs_t.glif  quotesingle.glif  uniE_032.glif  unie031.glif  y_e.glif
