[package]
name = "libmfekufo"
version = "0.1.0"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unic-ucd-block = "0.9"

# Logging
log = "0.4.11"
env_logger = "0.8.3"

## Our crates
# parses .glif files and gives us a place to put arbitrary data
glifparser = { git = "https://github.com/MFEK/glifparser.rlib" }
# IPC
mfek-ipc = { git = "https://github.com/MFEK/ipc.rlib" }
itertools = "0.10"
lazy_static = "1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
